--- a/src/ADempiere/modules/window/views/Window/style/windowStyleScoped.scss
+++ b/src/ADempiere/modules/window/views/Window/style/windowStyleScoped.scss
@@ -138,8 +138,8 @@ aside {
   background: #008fd3;
 }
 .close-info {
-  top: 40%;
-  position: absolute;
+  float: left;
+  padding-top: 50%;
 }
 .close-info-mobile {
   top: 29%;
