--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,8 +1,11 @@
 /* Mixins */
 @mixin clearfix {
   &:after {
-    content: "";
-    display: table;
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
     clear: both;
+    height: 0;
   }
 }
