--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,11 +10,13 @@ body {
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  text-rendering: optimizeLegibility;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
 }
 
 html {
   height: 100%;
+  box-sizing: border-box;
 }
 
 #app {
@@ -24,7 +26,12 @@ html {
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+a:focus,
+a:active {
+  outline: none;
 }
 
 a,
@@ -37,6 +44,34 @@ a:hover {
 
 div:focus {
   outline: none;
+}
+
+.fr {
+  float: right;
+}
+
+.fl {
+  float: left;
+}
+
+.pr-5 {
+  padding-right: 5px;
+}
+
+.pl-5 {
+  padding-left: 5px;
+}
+
+.block {
+  display: block;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.inlineBlock {
+  display: block;
 }
 
 .clearfix {
@@ -54,6 +89,10 @@ label {
 .components-container {
   margin: 30px 50px;
   position: relative;
+}
+
+.pagination-container {
+  margin-top: 30px;
 }
 
 // Refine element ui upload
@@ -79,6 +118,7 @@ aside {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
   a {
     color: #337ab7;
@@ -154,4 +194,17 @@ aside {
 
 .no-padding {
   padding: 0px !important;
+}
+
+.padding-content {
+  padding: 4px 0;
+}
+
+//refine vue-multiselect plugin
+.multiselect {
+  line-height: 16px;
+}
+
+.multiselect--active {
+  z-index: 1000 !important;
 }
